--- a/index.html
+++ b/index.html
@@ -4,38 +4,95 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Snaxitos - Inicio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/estilos.css">
+
+  <meta name="description" content="¡Bienvenido a Snaxitos! Encontrá snacks y bebidas con calidad, sabor y envíos rápidos. Descubrí nuestros productos destacados.">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
+  <link rel="stylesheet" href="./css/estilos.css" />
 </head>
 <body>
-  <header class="bg-white border-bottom border-warning py-3">
-    <div class="container d-flex justify-content-between align-items-center">
-      <img src="./imgs/snaxitosLogo.png" alt="Snaxitos" class="logo" width="150">
-      <nav>
-        <ul class="nav">
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./pages/snacks.html">Snacks</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./pages/bebidas.html">Bebidas</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./pages/contacto.html">Contacto</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./pages/faqs.html">FAQs</a></li>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="./imgs/snaxitosLogo.png" alt="Snaxitos Logo" height="40" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="./pages/snacks.html">Snacks</a></li>
+          <li class="nav-item"><a class="nav-link" href="./pages/bebidas.html">Bebidas</a></li>
+          <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="./pages/faqs.html">FAQs</a></li>
         </ul>
-      </nav>
+      </div>
+    </div>
+  </nav>
+
+  <header class="bg-warning text-center text-dark py-5">
+    <div class="container">
+      <h1 class="display-4 fw-bold" data-aos="fade-down">¡Bienvenidos a Snaxitos!</h1>
+      <p class="lead" data-aos="fade-up" data-aos-delay="100">Tu tienda online favorita de snacks y bebidas. Calidad, sabor y envíos rápidos en un solo lugar.</p>
+      <div class="mt-4" data-aos="zoom-in" data-aos-delay="200">
+        <a href="./pages/snacks.html" class="btn btn-dark me-2" aria-label="Ver Snacks">Ver Snacks</a>
+        <a href="./pages/bebidas.html" class="btn btn-outline-dark" aria-label="Ver Bebidas">Ver Bebidas</a>
+      </div>
     </div>
   </header>
 
-  <main class="snaxitos">
-    <h1 class="text-center mb-4">¡Bienvenidos a Snaxitos!</h1>
-    <p class="text-center">Somos tu tienda online favorita de snacks y bebidas. Descubrí nuestros productos, con precios justos, calidad garantizada y entregas rápidas.</p>
-    <div class="text-center mt-4">
-      <a href="./pages/snacks.html" class="btn btn-warning me-3">Ver Snacks</a>
-      <a href="./pages/bebidas.html" class="btn btn-outline-warning">Ver Bebidas</a>
+  <main class="py-5 bg-light">
+    <div class="container">
+      <h2 class="text-center mb-4" data-aos="fade-up">Nuestros destacados</h2>
+      <div class="row g-4">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="card h-100 shadow-sm text-center">
+            <img src="./imgs/papasClasicas.jpg" class="card-img-top" alt="Papas clásicas">
+            <div class="card-body">
+              <h5 class="card-title">Papas clásicas</h5>
+              <p class="card-text">Crujientes, saladas y adictivas. El snack infaltable para tus tardes.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="card h-100 shadow-sm text-center">
+            <img src="./imgs/galletitasSurtidas.jpg" class="card-img-top" alt="Galletitas dulces">
+            <div class="card-body">
+              <h5 class="card-title">Galletitas Surtidas</h5>
+              <p class="card-text">Un clásico para comer de todos los sabores y colores. Perfectas para acompañar tu merienda.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="card h-100 shadow-sm text-center">
+            <img src="./imgs/bebidaEnergizante.jpg" class="card-img-top" alt="Bebida energizante">
+            <div class="card-body">
+              <h5 class="card-title">Bebida energizante</h5>
+              <p class="card-text">Recargá energías y mantenete activo durante todo el día.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 
-  <footer class="bg-light text-center py-3 mt-5">
+  <footer class="bg-dark text-white text-center py-3">
     <p class="mb-0">&copy; Snaxitos | 2025. Todos los derechos reservados.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
+
