--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -4,55 +4,96 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Compra Bebidas - Snaxitos</title>
+
+  <meta name="description" content="Refrescate con las mejores bebidas de Snaxitos. Agua, jugos, leches vegetales y energizantes para todos los gustos.">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
   <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 <body>
-  <header class="bg-white border-bottom border-warning py-3">
-    <div class="container d-flex justify-content-between align-items-center">
-      <img src="../imgs/snaxitosLogo.png" alt="Snaxitos" class="logo" width="150" />
-      <nav>
-        <ul class="nav">
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="../index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./snacks.html">Snacks</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./bebidas.html">Bebidas</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./contacto.html">Contacto</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./faqs.html">FAQs</a></li>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../imgs/snaxitosLogo.png" alt="Snaxitos Logo" height="40" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="snacks.html">Snacks</a></li>
+          <li class="nav-item"><a class="nav-link active" href="bebidas.html">Bebidas</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
         </ul>
-      </nav>
+      </div>
+    </div>
+  </nav>
+
+  <header class="bg-warning text-center text-dark py-5 mb-4">
+    <div class="container">
+      <h1 class="display-4 fw-bold" data-aos="fade-down">Bebidas Refrescantes</h1>
+      <p class="lead" data-aos="fade-up" data-aos-delay="100">Perfectas para acompañar tus snacks. Refrescate con nuestras opciones.</p>
     </div>
   </header>
 
-  <main class="container my-5 bebidas-page">
-    <section class="productos mt-5">
-      <h2 class="text-center mb-4">Bebidas Refrescantes</h2>
-      <p class="text-center mb-4">Perfectas para acompañar tus snacks. Refrescate con nuestras opciones.</p>
-      <div class="contenedor-cards">
-        <div class="card h-100 text-center">
-          <img src="../imgs/aguaVillavicencio.jpg" alt="Agua Villavicencio" />
-          <div class="card-body">
+  <main class="container mb-5 bebidas-page">
+    <section class="row g-4 justify-content-center">
+      
+      <div class="col-md-3" data-aos="fade-up">
+        <div class="card h-100 text-center shadow-sm">
+          <img src="../imgs/aguaVillavicencio.jpg" class="card-img-top" alt="Agua Villavicencio" />
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">Agua Villavicencio</h5>
-            <p class="precio">$800</p>
-            <button class="btn btn-warning">Comprar</button>
-          </div>
-        </div>
-        <div class="card h-100 text-center">
-          <img src="../imgs/jugoCitric.jpg" alt="Jugo de Naranja Citric" />
-          <div class="card-body">
-            <h5 class="card-title">Jugo Citric</h5>
-            <p class="precio">$950</p>
-            <button class="btn btn-warning">Comprar</button>
-          </div>
-        </div>
-        <div class="card h-100 text-center">
-          <img src="../imgs/lecheAlmendras.jpg" alt="Leche de Almendras" />
-          <div class="card-body">
-            <h5 class="card-title">Leche de Almendras</h5>
-            <p class="precio">$1200</p>
-            <button class="btn btn-warning">Comprar</button>
+            <p class="card-text flex-grow-1">Agua mineral natural, ideal para hidratarte en cualquier momento del día.</p>
+            <p class="precio fw-bold">$800</p>
+            <button class="btn btn-warning mt-auto">Comprar</button>
           </div>
         </div>
       </div>
+
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="100">
+        <div class="card h-100 text-center shadow-sm">
+          <img src="../imgs/jugoCitric.jpg" class="card-img-top" alt="Jugo de Naranja Citric" />
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Jugo Citric</h5>
+            <p class="card-text flex-grow-1">Jugo 100% exprimido de naranja, sin conservantes. Naturalmente delicioso.</p>
+            <p class="precio fw-bold">$950</p>
+            <button class="btn btn-warning mt-auto">Comprar</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="200">
+        <div class="card h-100 text-center shadow-sm">
+          <img src="../imgs/lecheAlmendras.jpg" class="card-img-top" alt="Leche de Almendras" />
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Leche de Almendras</h5>
+            <p class="card-text flex-grow-1">Bebida vegetal ligera, sin azúcar, perfecta para una alimentación saludable.</p>
+            <p class="precio fw-bold">$1200</p>
+            <button class="btn btn-warning mt-auto">Comprar</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3" data-aos="fade-up" data-aos-delay="300">
+        <div class="card h-100 text-center shadow-sm">
+          <img src="../imgs/bebidaEnergizante.jpg" class="card-img-top" alt="Bebida Energizante" />
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Bebida Energizante</h5>
+            <p class="card-text flex-grow-1">Recargá energías y mantenete activo durante todo el día.</p>
+            <p class="precio fw-bold">$1100</p>
+            <button class="btn btn-warning mt-auto">Comprar</button>
+          </div>
+        </div>
+      </div>
+
     </section>
   </main>
 
@@ -61,5 +102,7 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
