--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,47 +2,63 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contáctanos - Snaxitos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../css/estilos.css">
+  <meta name="description" content="¿Tenés dudas o sugerencias? Contactanos por mail, teléfono o completá el formulario. En Snaxitos te respondemos rápido.">
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
+  <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 <body>
-  <header class="bg-white border-bottom border-warning py-3">
-    <div class="container d-flex justify-content-between align-items-center">
-      <img src="../imgs/snaxitosLogo.png" alt="Snaxitos" class="logo" width="150">
-      <nav>
-        <ul class="nav">
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="../index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./snacks.html">Snacks</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./bebidas.html">Bebidas</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./contacto.html">Contacto</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./faqs.html">FAQs</a></li>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../imgs/snaxitosLogo.png" alt="Snaxitos Logo" height="40" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="snacks.html">Snacks</a></li>
+          <li class="nav-item"><a class="nav-link" href="bebidas.html">Bebidas</a></li>
+          <li class="nav-item"><a class="nav-link active" href="contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
         </ul>
-      </nav>
+      </div>
+    </div>
+  </nav>
+
+  <header class="bg-warning text-center text-dark py-5 mb-4">
+    <div class="container" data-aos="zoom-in">
+      <h1 class="display-4 fw-bold">¡Contactanos!</h1>
+      <p class="lead">¿Tenés alguna duda, sugerencia o reclamo? Escribinos, ¡estamos para ayudarte!</p>
     </div>
   </header>
 
   <main class="container my-5">
-    <h1 class="text-center mb-4">Contacto</h1>
-
-    <div class="text-center mb-4">
+    <div class="text-center mb-5" data-aos="fade-up">
       <p><strong>Teléfono:</strong> +54 9 11 2233 4455</p>
-      <p><strong>Mail:</strong> snaxitos@gmail.com</p>
+      <p><strong>Email:</strong> snaxitos@gmail.com</p>
       <p><strong>Dirección:</strong> Av. Siempre Viva 742, Buenos Aires, Argentina</p>
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
       <div class="col-md-6">
         <form>
           <div class="mb-3">
             <label for="nombre" class="form-label">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" class="form-control" required>
+            <input type="text" id="nombre" name="nombre" class="form-control" required />
           </div>
 
           <div class="mb-3">
             <label for="email" class="form-label">Correo electrónico:</label>
-            <input type="email" id="email" name="email" class="form-control" required>
+            <input type="email" id="email" name="email" class="form-control" required />
           </div>
 
           <div class="mb-3">
@@ -50,7 +66,7 @@
             <textarea id="mensaje" name="mensaje" class="form-control" rows="5" required></textarea>
           </div>
 
-          <button type="submit" class="btn btn-warning">Enviar</button>
+          <button type="submit" class="btn btn-warning w-100">Enviar mensaje</button>
         </form>
       </div>
     </div>
@@ -61,5 +77,8 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
+
