--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -8,24 +8,35 @@
   <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 <body>
-  <header class="bg-white border-bottom border-warning py-3">
-    <div class="container d-flex justify-content-between align-items-center">
-      <img src="../imgs/snaxitosLogo.png" alt="Snaxitos" class="logo" width="150" />
-      <nav>
-        <ul class="nav">
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="../index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./snacks.html">Snacks</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./bebidas.html">Bebidas</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./contacto.html">Contacto</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./faqs.html">FAQs</a></li>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../imgs/snaxitosLogo.png" alt="Snaxitos Logo" height="40" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="./snacks.html">Snacks</a></li>
+          <li class="nav-item"><a class="nav-link" href="./bebidas.html">Bebidas</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link active" href="./faqs.html">FAQs</a></li>
         </ul>
-      </nav>
+      </div>
+    </div>
+  </nav>
+
+  <header class="bg-warning text-dark text-center py-5">
+    <div class="container">
+      <h1 class="display-4 fw-bold">Preguntas Frecuentes</h1>
+      <p class="lead">Respondemos las dudas más comunes de nuestros clientes.</p>
     </div>
   </header>
 
   <main class="container my-5">
-    <h1 class="text-center mb-4">Preguntas Frecuentes</h1>
-
     <div class="accordion" id="faqAccordion">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
@@ -79,12 +90,19 @@
         </div>
       </div>
     </div>
+
+    <section class="text-center mt-5">
+      <h3 class="mb-3">¿No encontraste tu respuesta?</h3>
+      <p>Envianos tu consulta desde el formulario de contacto. Estamos para ayudarte.</p>
+      <a href="./contacto.html" class="btn btn-warning fw-bold px-4">Ir al formulario</a>
+    </section>
   </main>
 
-  <footer class="bg-light text-center py-3 mt-5">
+  <footer class="bg-dark text-white text-center py-3">
     <p class="mb-0">&copy; Snaxitos | 2025. Todos los derechos reservados.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
