--- a/pages/snacks.html
+++ b/pages/snacks.html
@@ -3,63 +3,151 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Compra Snacks - Snaxitos</title>
+  <title>Snaxitos - Snacks</title>
+
+  <meta name="description" content="Explorá la mejor selección de snacks dulces, salados y saludables en Snaxitos. Calidad, sabor y entrega rápida.">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
   <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 <body>
-  <header class="bg-white border-bottom border-warning py-3">
-    <div class="container d-flex justify-content-between align-items-center">
-      <img src="../imgs/snaxitosLogo.png" alt="Snaxitos" class="logo" width="150" />
-      <nav>
-        <ul class="nav">
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="../index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./snacks.html">Snacks</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./bebidas.html">Bebidas</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./contacto.html">Contacto</a></li>
-          <li class="nav-item"><a class="nav-link text-warning fw-bold" href="./faqs.html">FAQs</a></li>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../imgs/snaxitosLogo.png" alt="Snaxitos Logo" height="40" />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link active" href="snacks.html">Snacks</a></li>
+          <li class="nav-item"><a class="nav-link" href="bebidas.html">Bebidas</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
         </ul>
-      </nav>
+      </div>
+    </div>
+  </nav>
+
+  <header class="bg-warning text-center text-dark py-5 mb-4">
+    <div class="container">
+      <h1 class="display-4 fw-bold" data-aos="zoom-in">Explorá Nuestros Snacks</h1>
+      <p class="lead" data-aos="fade-up" data-aos-delay="100">Desde dulces hasta salados, tenemos el snack ideal para vos. ¡Probá algo nuevo hoy!</p>
     </div>
   </header>
 
-  <main class="container my-5 snacks-page">
-    <section class="productos mt-5">
-      <h2 class="text-center mb-4">Snacks para Todos los Gustos</h2>
-      <p class="text-center mb-4">Desde dulces hasta salados, tenemos el snack ideal para vos. ¡Probá algo nuevo hoy!</p>
-      <div class="contenedor-cards">
-        <div class="card h-100 text-center">
-          <img src="../imgs/oraleNachos.jpg" alt="Nachos Orale" />
-          <div class="card-body">
-            <h5 class="card-title">Nachos Orale</h5>
-            <p class="precio">$1500</p>
-            <button class="btn btn-warning">Comprar</button>
+  <main class="container mb-5">
+    <section class="mb-5">
+      <h2 class="mb-4 text-center" data-aos="fade-right">Snacks Salados</h2>
+      <div class="row g-4 justify-content-center">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="card h-100 shadow-sm text-center">
+            <img src="../imgs/oraleNachos.jpg" class="card-img-top" alt="Nachos Orale" />
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Nachos Orale</h5>
+              <p class="card-text flex-grow-1">Crujientes y llenos de sabor a queso cheddar, ideales para acompañar tus dips favoritos.</p>
+              <p class="fw-bold">$1500</p>
+              <button class="btn btn-warning mt-auto" aria-label="Comprar Nachos Orale">Comprar</button>
+            </div>
           </div>
         </div>
-        <div class="card h-100 text-center">
-          <img src="../imgs/chocoArroz.jpg" alt="Barra de arroz con chocolate" />
-          <div class="card-body">
-            <h5 class="card-title">Choco Arroz</h5>
-            <p class="precio">$1000</p>
-            <button class="btn btn-warning">Comprar</button>
+
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="card h-100 shadow-sm text-center">
+            <img src="../imgs/papasClasicas.jpg" class="card-img-top" alt="Papas clásicas" />
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Papas clásicas</h5>
+              <p class="card-text flex-grow-1">Crujientes, saladas y adictivas. El snack infaltable para tus tardes.</p>
+              <p class="fw-bold">$1300</p>
+              <button class="btn btn-warning mt-auto" aria-label="Comprar Papas clásicas">Comprar</button>
+            </div>
           </div>
         </div>
-        <div class="card h-100 text-center">
-          <img src="../imgs/pipasGigantes.jpg" alt="Pipas Gigantes" />
-          <div class="card-body">
-            <h5 class="card-title">Pipas Gigantes</h5>
-            <p class="precio">$1300</p>
-            <button class="btn btn-warning">Comprar</button>
+
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="card h-100 shadow-sm text-center">
+            <img src="../imgs/pipasGigantes.jpg" class="card-img-top" alt="Pipas Gigantes" />
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Pipas Gigantes</h5>
+              <p class="card-text flex-grow-1">Pipas tostadas, perfectas para picar mientras disfrutás de una charla o una peli.</p>
+              <p class="fw-bold">$1300</p>
+              <button class="btn btn-warning mt-auto" aria-label="Comprar Pipas Gigantes">Comprar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="mb-5">
+      <h2 class="mb-4 text-center" data-aos="fade-right">Snacks Dulces</h2>
+      <div class="row g-4 justify-content-center">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="card h-100 shadow-sm text-center">
+            <img src="../imgs/chocoArroz.jpg" class="card-img-top" alt="Barra de arroz con chocolate" />
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Choco Arroz</h5>
+              <p class="card-text flex-grow-1">Barra crocante de arroz con chocolate oscuro y crowie. Snack premium sin culpa.</p>
+              <p class="fw-bold">$1000</p>
+              <button class="btn btn-warning mt-auto" aria-label="Comprar Choco Arroz">Comprar</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="card h-100 shadow-sm text-center">
+            <img src="../imgs/galletitasSurtidas.jpg" class="card-img-top" alt="Galletitas dulces" />
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Galletitas Surtidas</h5>
+              <p class="card-text flex-grow-1">Un clásico con variedad de sabores, ideales para compartir en cualquier momento.</p>
+              <p class="fw-bold">$1500</p>
+              <button class="btn btn-warning mt-auto" aria-label="Comprar Galletitas Surtidas">Comprar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h2 class="mb-4 text-center" data-aos="fade-right">Snacks Saludables</h2>
+      <div class="row g-4 justify-content-center">
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="card h-100 shadow-sm text-center">
+            <img src="../imgs/mixfrtsSecos.jpg" class="card-img-top" alt="Frutos secos" />
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Mix de Frutos secos</h5>
+              <p class="card-text flex-grow-1">Sabor natural y crujiente, ideal como snack nutritivo o topping saludable.</p>
+              <p class="fw-bold">$2000</p>
+              <button class="btn btn-warning mt-auto" aria-label="Comprar Mix de Frutos secos">Comprar</button>
+            </div>
           </div>
         </div>
       </div>
     </section>
   </main>
 
-  <footer class="bg-light text-center py-3 mt-5">
+  <footer class="bg-warning text-center text-dark py-3">
     <p class="mb-0">&copy; Snaxitos | 2025. Todos los derechos reservados.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
+
